# findmybike-models

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
bike_models/: data.py  image_transform.py  model.py  utils_plot.py
notebooks/: training.py
