[tool.poetry]
name = "bike_models"
version = "0.1.0"
description = ""
authors = ["sami jaghouar <sami.jaghouar@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.1"
torchvision = "^0.10.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.12"
pre-commit = "^2.15.0"
pytorch-lightning = "^1.4.7"
ipywidgets = "^7.6.5"
ipykernel = "^6.4.1"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
